plugins/kotlin/idea/tests/testData/highlighterMetaInfo/diagnostics/javaCodeInKotlinFile1.kt.highlighting.fir
// KTIJ-24099
// ALLOW_ERRORS
// CHECK_SYMBOL_NAMES
// HIGHLIGHTER_ATTRIBUTES_KEY

<!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>public<!> class <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CLASS'")!>Hierarchy<!> <!HIGHLIGHTING("severity='ERROR'; descr='Expecting a top level declaration'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>extends<!> <!HIGHLIGHTING("severity='ERROR'; descr='Expecting a top level declaration'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>KotlinOnlyClass<!> <!HIGHLIGHTING("severity='ERROR'; descr='[FUNCTION_DECLARATION_WITH_NO_NAME] Function declaration must have a name.'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!><!HIGHLIGHTING("severity='ERROR'; descr='Expecting a top level declaration'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>{<!>
    <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference 'void'.'; highlightingTextAttributesKey='WRONG_REFERENCES_ATTRIBUTES'")!>void<!> companionMembers(<!HIGHLIGHTING("severity='ERROR'; descr='Expecting an expression'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>)<!> {
        <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference 'Custom'.'; highlightingTextAttributesKey='WRONG_REFERENCES_ATTRIBUTES'")!>Custom<!> companionlateinitVariable <!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>=<!> KotlinOnlyClass<!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>.<!>companionlateinitVariable<!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>;<!>
        <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference 'Custom'.'; highlightingTextAttributesKey='WRONG_REFERENCES_ATTRIBUTES'")!>Custom<!> companionlateinitStaticVariable <!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>=<!> KotlinOnlyClass<!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>.<!>companionlateinitStaticVariable<!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>;<!>

    }<!><!HIGHLIGHTING("severity='ERROR'; descr='Expecting '}''; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!><!>
